Salesforce-Code-Git/src/objects/Developer__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>JIRA_Code__c</fullName>
        <label>JIRA Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No.</label>
        <type>Phone</type>
    </fields>
    <label>Developer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Email__c</columns>
        <columns>JIRA_Code__c</columns>
        <columns>Phone_No__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Developers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>